[gd_scene load_steps=10 format=3 uid="uid://cbatlw163lxtd"]

[ext_resource type="Script" uid="uid://reo11socfco8" path="res://scripts/player/player_controller.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://cnw3j7b3jho0t" path="res://scripts/systems/fsm/state_machine.gd" id="2_p47bc"]
[ext_resource type="Script" uid="uid://be2l5b4ayayr4" path="res://scripts/player/states/player_idle.gd" id="3_75vfm"]
[ext_resource type="Script" uid="uid://0dggr6bqwct3" path="res://scripts/player/states/player_run.gd" id="4_0owmy"]
[ext_resource type="Script" uid="uid://ctswglpdkfxrt" path="res://scripts/player/states/player_air.gd" id="5_qek5x"]
[ext_resource type="Script" uid="uid://d7d7c5fjoqlp" path="res://scripts/player/states/player_bike.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://fsxwo7tyejlx" path="res://scripts/player/states/player_climb.gd" id="7_0owmy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dovo2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gmlin"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8afob")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_dovo2")

[node name="CamOrigin" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CamOrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8753668, 2.038522)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_p47bc")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_75vfm")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("4_0owmy")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("5_qek5x")

[node name="Bike" type="Node" parent="StateMachine"]
script = ExtResource("6_75vfm")

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource("7_0owmy")

[node name="WallDetector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_gmlin")
skeleton = NodePath("../CollisionShape3D")
